Experimented with windowing

--- a/Engine/build.gradle
+++ b/Engine/build.gradle
@@ -8,7 +8,16 @@ repositories {
     mavenCentral()
 }
 
+def lwjglVersion = '3.3.1'
+def lwjglNatives = 'natives-windows'
+
 dependencies {
+
+    api "org.lwjgl:lwjgl:$lwjglVersion"
+    api "org.lwjgl:lwjgl:$lwjglVersion:$lwjglNatives"
+    api "org.lwjgl:lwjgl-glfw:$lwjglVersion"
+    api "org.lwjgl:lwjgl-glfw:$lwjglVersion:$lwjglNatives"
+
     testImplementation 'org.spockframework:spock-core:2.2-M1-groovy-4.0'
     testImplementation 'org.apache.groovy:groovy:4.0.2'
 }
