Separated native/crossplatform LWJGL dependencies
Native dependencies must now be pulled in by the project that's using the engine - the engine build itself is now platform-neutral.

--- a/Demo/build.gradle
+++ b/Demo/build.gradle
@@ -11,6 +11,8 @@ repositories {
 dependencies {
 
     implementation project(':Engine')
+    runtimeOnly "org.lwjgl:lwjgl:$lwjglVersion:$lwjglNatives"
+    runtimeOnly "org.lwjgl:lwjgl-glfw:$lwjglVersion:$lwjglNatives"
 
     testImplementation 'org.spockframework:spock-core:2.2-M1-groovy-4.0'
     testImplementation 'org.apache.groovy:groovy:4.0.2'
